--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- SEO Dasar -->
+    <title>Nura Net</title>
+    <meta name="description" content="Nura Net menyediakan layanan internet cepat dan fleksibel dengan berbagai metode pembayaran." />
+    <meta name="keywords" content="Internet, Provider Internet, Nura Net, Pembayaran Fleksibel, Internet Cepat" />
+    <meta name="author" content="Nura Net" />
+
+    <!-- Open Graph untuk media sosial -->
+    <meta property="og:title" content="Nura Net" />
+    <meta property="og:description" content="Layanan internet cepat dengan berbagai metode pembayaran fleksibel." />
+    <meta property="og:image" content="/vite.svg" />
+    <meta property="og:url" content="https://nuranet.example.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nura Net" />
+    <meta name="twitter:description" content="Layanan internet cepat dan fleksibel." />
+    <meta name="twitter:image" content="/vite.svg" />
+
+    <!-- Smooth Scroll -->
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
